--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 }
 
 .card .content .details {
-  padding: 40px;
+  padding: 30px;
   text-align: center;
   width: 100%;
   transition: 0.5s;
@@ -98,30 +98,32 @@ body {
   margin: 20px 0;
 }
 
-.card .content .details .data h3 {
+.card .content .details .data a {
   font-size: 1em;
   color: #555;
   line-height: 1.2em;
   font-weight: 600;
+  opacity: 0.8;
+  text-decoration: none;
 }
 
-.card .content .details .data h3 span {
+.card .content .details .data a span {
   font-size: 0.85em;
   font-weight: 400;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .card .content .details .actionBtn {
   display: flex;
   justify-content: space-between;
-  /* gap: 20px; */
 }
 
-.card .content .details .actionBtn button {
+.btn {
   padding: 10px 30px;
   border-radius: 5px;
   border: none;
   outline: none;
+  text-decoration: none;
   font-size: 1em;
   font-weight: 500;
   background: #ff5f95;
@@ -129,7 +131,7 @@ body {
   cursor: pointer;
 }
 
-.card .content .details .actionBtn button:nth-child(2) {
+#btnTel {
   border: 1px solid #999;
   color: #999;
   background: #fff;
